<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorMainBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/twotone_emoji_objects_white_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"/>
        <ImageView
            android:src="@drawable/twotone_emoji_objects_white_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"/>
        <ImageView
            android:src="@drawable/twotone_emoji_objects_white_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/twotone_emoji_objects_white_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"/>
        <ImageView
            android:src="@drawable/baseline_sentiment_satisfied_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/twotone_emoji_objects_white_18dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer_test_view"
        android:text="@string/text_question"
        android:padding="9dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonTrue"
            android:text="@string/button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:src="@drawable/outline_arrow_back_black_18dp"
            android:id="@+id/buttonPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_previous"/>
        <ImageButton
            android:src="@drawable/outline_arrow_forward_black_18dp"
            android:id="@+id/buttonNext"
            android:contentDescription="@string/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>